# cs2-kit

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AMBuildScript  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  Protobuf.ambuild  README.md  conanfile.py  configure.py  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docs.yml
cmake/: BuildInfo.hpp.in  CS2KitBuildInfo.cmake  CS2KitSdk.cmake  CS2KitThirdParty.cmake  CS2Plugin.cmake  GitBuildInfoScript.cmake  plugin.vdf.in
conan/profiles/: linux-steamrt.txt  windows-msvc.txt
docs/: architecture.md  chat.md  commands.md  config.md  database.md  getting-started.md  header.html  http.md  mainpage.md  menu.md  menus.md  players.md  plugin.md  sdk.md
docs/sdk/: entity-ops.md  events.md  gamedata.md  hooks.md  messaging.md  players.md  visibility.md
gamedata/: signatures.jsonc  signatures.schema.json
include/CS2Kit/: Api.hpp  CS2Kit.hpp
include/CS2Kit/Commands/: Command.hpp  CommandManager.hpp  CommandSpec.hpp  ICommandCaller.hpp
include/CS2Kit/Core/: ActiveService.hpp  CallbackRegistry.hpp  ConsoleLogger.hpp  EffectDescriptor.hpp  EffectManager.hpp  HookMacros.hpp  ILogger.hpp  JsonConfig.hpp  LoadReport.hpp  MetamodPluginBase.hpp  Paths.hpp  PluginBase.hpp  PluginPolicy.hpp  Registry.hpp  ScheduledEffect.hpp  Scheduler.hpp  Services.hpp  Singleton.hpp  Slot.hpp  StatusService.hpp
include/CS2Kit/Database/: Column.hpp  DbResult.hpp  Mapping.hpp  Migrator.hpp  PostgresDatabase.hpp
include/CS2Kit/Http/: HttpClient.hpp  HttpResult.hpp  RestJsonApi.hpp
include/CS2Kit/Menu/: Flow.hpp  Menu.hpp  MenuBuilder.hpp  MenuContext.hpp  MenuManager.hpp  MenuOption.hpp  MenuPresets.hpp  MenuRenderer.hpp  Options.hpp
include/CS2Kit/Menu/Options/: Bar.hpp  ButtonOption.hpp  ChoiceOption.hpp  InputOption.hpp  ProgressBarOption.hpp  SelectorOption.hpp  SliderOption.hpp  SubmenuOption.hpp  TextOption.hpp  ToggleOption.hpp
include/CS2Kit/Players/: ActionDispatcher.hpp  PerSlot.hpp  Player.hpp  PlayerManager.hpp  TargetResolver.hpp  Targeting.hpp
include/CS2Kit/Sdk/: ChatInputCapture.hpp  ConVarService.hpp  EffectOps.hpp  Entity.hpp  EntityKeyValues.hpp  EntityOps.hpp  EntityRender.hpp  GameData.hpp  GameEventService.hpp  GameEvents.hpp  GameInterfaces.hpp  GlowVision.hpp  InputHistoryService.hpp  MemoryAccess.hpp  MoveType.hpp  MovementHook.hpp  ObserverMode.hpp  PawnOps.hpp  PawnPredicates.hpp  PersistentCenterHtml.hpp  PlayerController.hpp  PrecacheService.hpp  RecipientFilter.hpp  Schema.hpp  ServerCommand.hpp  TransmitFilter.hpp  UserCmd.hpp  UserCmdHook.hpp  UserMessage.hpp
include/CS2Kit/Utils/: AngleMath.hpp  Chat.hpp  ChatColors.hpp  DecayingScore.hpp  Json.hpp  Log.hpp  SlotThrottle.hpp  SteamId.hpp  StringUtils.hpp  TimeUtils.hpp  Translations.hpp  Validation.hpp
protobufs/: cs_usercmd.proto
scripts/: bootstrap.py  build.ps1  build.py  build.sh  buildtools.py  format.py  generate-protos.ps1  generate-protos.sh  init_project.py  new_plugin.py
scripts/lib/: common.sh
src/: AMBuilder  CS2Kit.cpp
src/Commands/: Command.cpp  Command.hpp  CommandManager.cpp  CommandManager.hpp  CommandSpec.cpp  ICommandCaller.hpp
src/Core/: ConsoleLogger.cpp  ConsoleLogger.hpp  EffectDispatch.cpp  EffectManager.cpp  IPathResolver.hpp  LoadReport.cpp  Logger.cpp  MetamodPluginBase.cpp  PathResolver.cpp  Paths.cpp  ScheduledEffect.cpp  Scheduler.cpp  Scheduler.hpp  Services.cpp  Singleton.hpp  StatusService.cpp
src/Database/: Migrator.cpp  PostgresDatabase.cpp
src/Http/: HttpClient.cpp  RestJsonApi.cpp
src/Menu/: IMenuIO.hpp  Menu.hpp  MenuBuilder.hpp  MenuBuilderRows.cpp  MenuContext.cpp  MenuManager.cpp  MenuManager.hpp  MenuOption.cpp  MenuPresets.cpp  MenuRenderer.cpp  MenuRenderer.hpp
src/Players/: ActionDispatcher.cpp  Player.cpp  PlayerManager.cpp  TargetResolver.cpp  Targeting.cpp
src/Sdk/: ChatInputCapture.cpp  ConVarService.cpp  ConVarService.hpp  EffectOps.cpp  Entity.cpp  Entity.hpp  EntityKeyValues.cpp  EntityOps.cpp  EntityRender.cpp  GameData.cpp  GameData.hpp  GameEventService.cpp  GameEventService.hpp  GameEvents.cpp  GameInterfaces.hpp  GameSystem.hpp  GlowVision.cpp  InputHistoryService.cpp  MovementHook.cpp  PawnOps.cpp  PersistentCenterHtml.cpp  PlayerController.cpp  PrecacheService.cpp  Schema.cpp  Schema.hpp  ServerCommand.cpp  SigScanner.cpp  SigScanner.hpp  TransmitFilter.cpp  UserCmd.cpp  UserCmdHook.cpp  UserMessage.cpp  UserMessage.hpp  VirtualCall.hpp
src/Utils/: Chat.cpp  ChatColors.cpp  Log.hpp  SteamId.cpp  SteamId.hpp  StringUtils.cpp  TimeUtils.cpp  TimeUtils.hpp  Translations.cpp  Translations.hpp
templates/plugin/: CMakeLists.txt
templates/plugin/configs/: settings.jsonc  settings.schema.json
templates/plugin/configs/translations/: en.json
templates/plugin/src/: Commands.cpp  Config.hpp  Managers.hpp  Plugin.cpp  Plugin.hpp
templates/project/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  pyproject.toml
tests/: AngleMathTests.cpp  CallbackRegistryTests.cpp  DecayingScoreTests.cpp  EffectManagerTests.cpp  MemoryAccessTests.cpp  MicroTest.hpp  MicroTestMain.cpp  MigratorTests.cpp  ParseDurationTests.cpp  SlotThrottleTests.cpp  SteamIdTests.cpp  StringUtilsTests.cpp  TargetingTests.cpp  TimeUtilsTests.cpp  run-tests.sh
