[project]
name = "cs2-kit"
version = "1.0.0"
description = "C++23 library for CS2 Metamod:Source plugins - build tools"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "cmake>=4.3.4",
    "conan>=2.29.1",
    "ninja>=1.13.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "poethepoet>=0.47.0",
]

[tool.uv]
package = false

[tool.poe.tasks]
build = "python scripts/build.py"
build-linux = "python scripts/build.py linux-steamrt-release"
lint = "ruff check ."

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["vendor"]
