[project]
name = "cs2-kit"
version = "1.0.0"
description = "C++23 library for CS2 Metamod:Source plugins - build tools"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

dependencies = [
    "cmake>=4.3.4",
    "conan>=2.29.1",
    "ninja>=1.13.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "poethepoet>=0.47.0",
    "clang-format==22.1.5",
]

[tool.uv]
package = false

[tool.poe.tasks]
build = "python scripts/build.py"
build-linux = "python scripts/build.py linux-steamrt-release"
# Stamps plugins/<name>/ in the invoking repo (run from the consuming repo's root).
new-plugin = "python scripts/new_plugin.py"
lint = "ruff check ."
format = "python scripts/format.py"
format-check = "python scripts/format.py --check"

[tool.ruff]
line-length = 100
target-version = "py314"
# templates/ are $placeholder scaffolds; linting would drop a .ruff_cache there.
extend-exclude = ["vendor", "templates"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
# Sibling conan/ profiles dir would otherwise make isort treat conan as first-party.
known-third-party = ["conan"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["vendor"]
